--- a/microserviciojugador-application-test.yml
+++ b/microserviciojugador-application-test.yml
@@ -1,1 +1,7 @@
-
+spring:
+  data:
+    mongodb:
+      database: jugadorDBTest
+      password: 123456
+      uri: mongodb://root:123456@localhost:27017/
+      username: root
