--- a/microservicioequipo-application-test.yml
+++ b/microservicioequipo-application-test.yml
@@ -1,5 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3307/equipoFutbolTest
-    password: 123456
-    username: root
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
