--- a/microservicioequipo-application-test.yml
+++ b/microservicioequipo-application-test.yml
@@ -1,6 +1,9 @@
 spring:
   datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3307/equipoFutbolTest
+    username: root
+    password: 123456
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
