--- a/microserviciojugador-application-dev.yml
+++ b/microserviciojugador-application-dev.yml
@@ -2,4 +2,6 @@ spring:
   data:
     mongodb:
       database: jugadorDB
+      password: 123456
       uri: mongodb://root:123456@localhost:27017/
+      username: root
