--- a/microservicioequipo-application-dev.yml
+++ b/microservicioequipo-application-dev.yml
@@ -1,2 +1,8 @@
 spring:
+  datasource:
     url: jdbc:mysql://localhost:3306/equipoFutbol
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
